--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       property="og:image"
       content="https://lidang-jiang.github.io/images/profile.jpeg"
     />
+    <meta property="og:site_name" content="Lidang Jiang" />
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -50,6 +51,15 @@
           "https://scholar.google.com/citations?user=SvUCAeQAAAAJ&hl=en",
           "https://orcid.org/0009-0000-6592-4077"
         ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Lidang Jiang",
+        "alternateName": "江李当",
+        "url": "https://lidang-jiang.github.io"
       }
     </script>
 
